src/test/deca/codegen/valid/homemade/modulo_returns_int.deca
// Description:
//    print a modulo
//
// Results:
//  ok
//
// History:
//    created 14/01/2020

{
   println(9%4); // expect 1
}